<resources>
    <string name="app_name">Food Hub</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="phone">Phone</string>
    <string name="do_not_have_an_account">Do not have an account? Sign Up</string>
    <string name="hi_username">Hi UserName</string>
    <!--    <string name="Lets_eat_delicious_food">Let&apos;s eat delicious food</string>-->
    <string name="Lets_eat_delicious_food">Let\'s eat delicious food</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="indian">Indian</string>
    <string name="item_description">A true classic - our original blend is rich, smooth, delicious and ready to brew in convenient K-Cup pods for your Keurig brewer</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="food_items">Food Items</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="place_order">Place Order</string>
    <string name="phone_number">Phone Number</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="add">add</string>
    <string name="add_address">Add Address</string>
    <string name="address">Address</string>
    <string name="payment_option">Payment Option</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="credit_debit_card">Credit/Debit card</string>
    <string name="name_on_card">Name on card</string>
    <string name="card_number">Card number</string>
    <string name="cvv">CVV</string>
    <string name="exp_date">Exp Date</string>
    <string name="pay">Pay</string>
    <string name="feel_free_to_contact_us">Feel free to contact us:</string>
    <string name="ok">OK</string>
    <string name="food_hub_com">support@foodhub.com</string>
    <string name="_631_3855_444">000-2222-444</string>
</resources>