<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_payment_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/payment_option"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_payment_option"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_cash_on_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash_on_delivery"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit_debit_card"
            android:textSize="22sp"
            android:textStyle="bold" />

    </RadioGroup>

    <EditText
        android:id="@+id/et_name_on_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/name_on_card"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_name_on_card"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/card_number"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_cvv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_card_number"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/cvv"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_expiry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_cvv"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/exp_date"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_expiry"
        android:layout_marginTop="20dp"
        android:background="@color/orange"
        android:text="@string/pay"
        android:textColor="@color/white" />
</RelativeLayout>