<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/iv_wall"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:layout_below="@id/app_bar"
        android:src="@drawable/wall1" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@+id/iv_wall"
        android:layout_marginTop="10dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@+id/et_name"
        android:layout_marginTop="10dp"
        android:clickable="false"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@+id/et_email"
        android:layout_marginTop="10dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:textColor="@color/white"
        android:layout_below="@id/et_phone"
        android:backgroundTint="@color/orange"
        android:text="@string/update" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/red"
        android:text="@string/logout" />

</RelativeLayout>