<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_header_image"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/wall1" />
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_app_name"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/logo" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@id/iv_app_name"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:hint="@string/name"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@+id/et_name"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@+id/et_email"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@+id/et_phone"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@+id/et_password"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@+id/et_confirm_password"
                android:layout_marginLeft="40dp"
                android:background="@color/orange"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:text="@string/signup"
                android:textSize="16sp" />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>